fixed sticky header not overlapping nav link titles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@
     padding: 0;
 }
 
+html {
+    scroll-padding-top: 79px; /* height of sticky header */
+}
+
 body {
     color: whitesmoke;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -20,10 +24,15 @@ body {
 
 /* Header Styles */
 header {
-    background-color: #392f5a;
+    height: 80px;
     padding: 5px 15px;
     position: sticky;
     top: 0;
+    background-image: url(../images/Nebula-cloud.jpg);
+    background-size: cover;
+    background-position: bottom;
+    background-attachment: fixed;
+    z-index: 9999;
 }
 
 header h1 {
@@ -36,22 +45,34 @@ header a {
     text-decoration: none;
 }
 
-header a:visited {
-    color:#bfc0c0;
-}
-
 header nav ul {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+}
+
+header nav ul li {
+    margin: 0 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     list-style: none;
 }
 
-header nav ul li {
+header nav ul li a {
     margin: 15px 0 8px 0;
     padding: 10px 30px;
     font-size: 22px;
+    background-color: #392f5a;
+    border: 1px solid #ffd700;
+    border-radius: 10px;
+}
+
+header nav ul li a:hover {
+    background-color: #ffd700;
+    border: 1px solid #392f5a;
+    border-radius: 10px;
+    color: #392f5a;
 }
 
 .header-flex {
@@ -71,6 +92,7 @@ header nav ul li {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    background-attachment: fixed;
 }
 
 .hero-style p {
@@ -216,14 +238,28 @@ footer address div {
 
 /* Media Queries */
 @media screen and (max-width: 1024px) {
+    html {
+        scroll-padding-top: 100px; /* height of sticky header */
+    }
+
+    header {
+        height: 100px;
+    }
+    
     header h1 {
-        padding-top: 15px;
+        padding-top: 25px;
         font-size: 36px;
     }
 
     header nav ul li {
+        margin: 0;
+        padding: 10px 10px;
+    }
+
+    header nav ul li a {
+        margin: 15px 0 8px 0;
         padding: 10px 15px;
-        font-size: 2.3vw;
+        font-size: 16px;
     }
 
     .app {
@@ -233,24 +269,59 @@ footer address div {
 
 @media screen and (max-width: 768px) {
     header h1 {
-        font-size: 36px;
+        padding-top: 30px;
+        font-size: 24px;
+    }
+
+    header nav ul li a {
+        margin: 15px 0 8px 0;
+        padding: 10px 8px;
+        font-size: 16px;
     }
 
     h2 {
         font-size: 22px;
     }
+
     .certifications h3 {
         font-size: 20px;
     }
+    
     .about-me {
         font-size: 16px;
     }
+    
     .app {
         min-height: 300px;
     }
 }
 
 @media screen and (max-width: 600px) {
+    header {
+        height: 150px;
+    }
+    
+    header h1 {
+        font-size: 36px;
+        color: whitesmoke;
+        text-shadow: 0 0 10px black;
+    }
+
+    header nav ul {
+        justify-content: center;
+    }
+
+    header nav ul li {
+        margin: 10px 0 5px 0;
+        padding: 10px;
+    }
+
+    header nav ul li a {
+        margin: 5px 0 8px 0;
+        padding: 10px 8px;
+        font-size: 18px;
+    }
+
     h2, h3 {
         display: flex;
         justify-content: center;
@@ -269,10 +340,6 @@ footer address div {
     header nav ul {
         flex: 1;
         justify-content: space-around;
-    }
-
-    header nav ul li {
-        font-size: 3vw;
     }
 
     .app {
@@ -299,8 +366,13 @@ footer address div {
     }
 
     header nav ul li {
+        flex: 1 25%;
         margin: 10px 0 5px 0;
-        padding: 10px 30px;
+        padding: 10px 5px;
+    }
+
+    header nav ul li a {
+        font-size: 14px;
     }
 
     footer h2 {
